--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -15,21 +15,18 @@ test:
 builder:
   build: ../../
   dockerfile: docker/dev/Dockerfile
-  volumes: 
-    - ../../target:/wheelhouse
   volumes_from: 
     - cache
   entrypoint: "entrypoint.sh"
   command: ["pip", "wheel", "--no-index", "-f /build", "."]
 agent:
   image: gkatz/ansible
-  volumes: 
-    - ../../ansible/probe.yml:/ansible/site.yml
   links:
     - db
   environment:
     PROBE_HOST: "db"
     PROBE_PORT: "3306"
+  command: ["probe.yml"]
 db:
   image: mysql:5.6
   hostname: db
